src/main/java/semantic/abstractSintaxTree/test/failing/parameterTypeMismatch.ru
/? ParameterTypeMismatchException
start {
    (IO.out_str('\n'));
}